// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconPrint /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconPrint /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconPrint /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconPrint /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconPrint /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconPrint /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconPrint /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconPrint /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
     
    <path
      d="M219.9 89.5H202V55.6l-30-25.1H67.3c-7.9 0-14.3 6.4-14.3 14.3v44.7H36.1c-5.6 0-10.1 4.6-10.1 10.1v77.7c0 5.6 4.6 10.1 10.1 10.1H52v18c0 7.7 6.3 14 14 14h123c7.7 0 14-6.3 14-14v-18h16.9c5.6 0 10.1-4.6 10.1-10.1V99.6c0-5.5-4.6-10.1-10.1-10.1zm-152.1-51h101.6L194 59.3v30.2H62V44.3c0-3.2 2.6-5.8 5.8-5.8zm121.7 172h-123c-3.1 0-5.5-2.5-5.5-5.5v-41.5h134V205c0 3-2.5 5.5-5.5 5.5zm7.6-85.1c-4.2 0-7.6-3.4-7.6-7.6 0-4.2 3.4-7.6 7.6-7.6 4.2 0 7.6 3.4 7.6 7.6 0 4.2-3.4 7.6-7.6 7.6z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconPrint /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
